--- a/style/main.css
+++ b/style/main.css
@@ -3,7 +3,7 @@
 *{
     box-sizing: border-box;
     padding: 0;
-    border: 0;
+    margin: 0;
 }
 
 @font-face {
@@ -38,4 +38,20 @@ body{
 
 :root{
     --mainAccent: #E50914;
+}
+
+nav{
+    display: flex;
+    /* background-color: wheat; */
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1rem .4rem;
+}
+
+.netflix-logo{
+    fill: var(--mainAccent);
+    max-width: 150px;
+    height:2.25rem;
+    width:8.375rem;
 }
