--- a/style/main.css
+++ b/style/main.css
@@ -83,13 +83,30 @@ nav{
         border-radius: .2vw;
     }
 
+main{
+    display: grid;
+    grid-template-columns: 1fr min(1200px,100% )1fr;
+    min-height: 800vh;
+    grid-auto-rows: min-content;
+}
 
+main > * {
+    grid-column: 2;
+}
+
+.fullbleed{
+    width: 100%;
+    grid-column: 1 / 4;
+}
+.heading{
+    font-size: 3.2rem;
+    margin: .3em 0;
+}
 #title{
-    min-height: 100vh; 
     background: url('../media/image/bgtitle.jpg'),linear-gradient(180deg, rgba(0, 0, 0, 0.894) 0%, rgba(0, 0, 0, 0.488) 30%,rgba(0, 0, 0, 0.431) 50%,rgba(0, 0, 0, 0.534) 60%, rgba(0, 0, 0, 0.825));
     background-size: cover;
     background-blend-mode: multiply;
-    
+    height: min(100vh, 1000px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -173,3 +190,58 @@ nav{
         border: none;
         cursor: pointer;
      }
+
+
+.grid-half{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.section-border{
+    border-bottom: 10px solid #222222;
+    height: 4px;
+    width: 100%;
+}
+
+.grid-half .image-part img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+#feature .text-part{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0rem 4rem;
+}
+
+#feature{
+    grid-template-columns: 60% 1fr;
+    margin: 4rem 0;
+    align-content: center;
+}
+
+.text-part .paragraph{
+    font-size: 1.5rem;
+}
+
+
+.image-part.video {position: relative;}
+.image-part.video video{
+    position: absolute;
+    left: 12%;
+    transform: translateY(min(12vh, 50px));
+    z-index: -100;
+    object-fit: cover;
+    max-width: 80%;
+    max-height: 100%;
+}
+.image-part.video image{
+    position: relative;
+    min-width: 100%;
+    margin: 0 auto;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
