--- a/style/main.css
+++ b/style/main.css
@@ -224,6 +224,7 @@ main > * {
 
 .text-part .paragraph{
     font-size: 1.5rem;
+    max-width: 35ch;
 }
 
 
@@ -244,4 +245,15 @@ main > * {
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+
+#feature-offline{
+    grid-template-columns: 40% 1fr;
+    margin: 8rem 0 0 0;
+}
+
+#feature-offline .text-part{
+    margin: 4rem 0 0 auto;
+    max-width: 80%;
 }
