--- a/style/main.css
+++ b/style/main.css
@@ -198,7 +198,7 @@ main > * {
 }
 
 .section-border{
-    border-bottom: 10px solid #222222;
+    border-bottom: 6px solid #222222;
     height: 4px;
     width: 100%;
 }
@@ -262,4 +262,24 @@ main > * {
         max-width: 90%;
         max-height: 90%;
         margin: 0 0 0 auto;
+    }
+
+    #multi .image-part.video video{
+        position: absolute;
+        left: 20%;
+        transform: translateY(min(15vh, 50px));
+        z-index: -100;
+        object-fit: cover;
+        max-width: 60%;
+        max-height: 100%;
+    }
+
+#multi{
+    margin: 4rem 3em;
+}
+
+    #multi .text-part{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
