--- a/style/main.css
+++ b/style/main.css
@@ -49,39 +49,64 @@ nav{
     top: 0;
     left: 50%;
     translate: -50%;
+    height: fit-content;
 }
 
     .netflix-logo{
         fill: var(--mainAccent);
         max-width: 150px;
 
-        height:3.25rem;
-        width:9.375rem;
+        height:4.25rem;
+        width:10.375rem;
+        transform: translateY(1rem);
     }
 
      .language-sel{
         background-color: transparent;
         border: 1px solid white;
         color: white;
-        padding: .8em 2rem;
+        padding: .8em 1.9rem;
         margin: 0 1rem;
         border-radius: .2vw;
-        font-weight: 2rem;
+
     }
  
-    .language-sel option::after{
-        content: "alaaaaaa";
-        font-size: 1rem;
+    .language{
+        position: relative;
+
+    }
+    .language::before{
+        content: url("../media/image/globe-solid.svg");
+        color: white;
         position:absolute;
+        top: 30%;
+        left: 12%;
+        width: 15px;
+        height: 15px;
+        filter: invert(100%);
     }
 
     .language-sel option{
         color: black;
     }
     nav .right-nav .nav-cta{
-        padding: .8em 2rem;
+        padding: .8em 1rem;
         border-radius: .2vw;
+        white-space: nowrap;
     }
+    nav .right-nav{
+        display: flex;
+        align-items: center;
+        justify-content: stretch;
+        flex-basis: 2rem;
+     }
+     nav .right-nav > *{
+        flex-shrink: 2;
+     }
+
+     nav .logo svg{
+        
+     }
 
 main{
     display: grid;
@@ -113,7 +138,7 @@ main > * {
     align-items: center;
     justify-content: center;
 
-    padding-top: 100px;
+    padding-top: min(10vh,50px);
     text-align: center;
 }
 
@@ -430,6 +455,12 @@ footer{
         margin: 1em 0;
     }
 
+    footer .language::before{
+        content: url("../media/image/globe-solid.svg");
+        top: 28%;
+        left: 2.3%;
+    }
+
 
 @media screen and (max-width:950px){
     .grid-half{
@@ -452,7 +483,9 @@ footer{
     .grid-half.r{
         flex-direction: column-reverse;
     }
-
+    #multi .image-part.video video {
+        transform: translateY(min(10vh, 40px));
+    }
 
     #feature-offline{
         margin: 0;
@@ -563,4 +596,14 @@ footer{
         text-align: center;
         max-width: 80%;
      }
+
+     nav{
+        padding: 1.5rem 0 0 2rem;
+     }
+     nav .right-nav{    
+        scale: .8;
+     
+     }
+
+   
 }
